# track_search

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  crates.js  rustdoc.css  search-index.js  settings.html  source-files.js
.docs/: index.html
.docs/images/: .$architecture.drawio.svg.bkp
.github/actions/deploy/: action.yml
.github/actions/docs/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  doc.yml  main.yml  pr.yml  rust.yml
adapter/application/grpc/: Cargo.toml  build.rs
adapter/application/grpc/proto/: track.proto
adapter/application/grpc/src/: lib.rs
adapter/application/html/: Cargo.toml
adapter/application/html/src/: lib.rs  search.rs  track.rs
adapter/application/html/templates/: search.html  track.html
adapter/application/view/: Cargo.toml
adapter/log/cloud-logging/: Cargo.toml
adapter/log/simple/: Cargo.toml
adapter/mock-gateway/: Cargo.toml
adapter/mock-gateway/src/: lib.rs
adapter/repository/mock/: Cargo.toml
adapter/repository/spotify/: Cargo.toml
adapter/text-logger/: Cargo.toml
adapter/text-logger/src/: lib.rs
application/view/: Cargo.toml
application/view/src/: lib.rs  modules.rs  search.rs  track.rs
application/view/templates/: search.html
domain/: Cargo.toml
domain/src/model/: track_entity.rs
domain/src/port/: log.rs  repository.rs
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/config/: log.rs  mod.rs  repository.rs
driver/src/config/log/: cloud_logging.rs  simple.rs
driver/src/config/repository/: mock.rs  spotify.rs
entity/src/: key.rs  lib.rs  mode.rs  score.rs  track_dto.rs  track_entity.rs
entity/src/model/: error.rs  mod.rs  score.rs  track_entity.rs
implementors/actix_web/service/: trait.HttpServiceFactory.js
implementors/askama/: trait.SizedTemplate.js  trait.Template.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/failure/: trait.Fail.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
port/: Cargo.toml
port/src/: container.rs  lib.rs  repository.rs
port/src/log/: mod.rs
port/src/repository/: mod.rs  track_repository.rs
src/: adapter.rs  application.rs  entity.rs  main.rs  usecase.rs
src/adapter/: controller.rs
src/adapter/controller/: rest.rs  view.rs
src/adapter/gateway/: mock.rs
src/application/: rest.rs  view.rs
src/application/rest/: track.rs
src/application/view/: track.rs
src/entity/: track.rs
src/entity/track/: acousticness.rs  analysis.rs  artist.rs  danceability.rs  energy.rs  image.rs  instrumentalness.rs  liveness.rs  popularity.rs  score.rs  speechiness.rs  track_entity.rs  track_id.rs  track_title.rs  valence.rs
src/track_search/: adapter.rs.html  application.rs.html  entity.rs.html  error.rs.html  main.rs.html  usecase.rs.html
src/track_search/adapter/: controller.rs.html  gateway.rs.html  logger.rs.html
src/track_search/application/: rest.rs.html  view.rs.html
src/track_search/entity/: error.rs.html  track.rs.html
src/track_search/usecase/: log.rs.html  repository.rs.html  track_usecase.rs.html
src/usecase/: log.rs  repository.rs  track_usecase.rs
src/usecase/repository/: track_repository.rs
templates/: search.html  track.html
track_search/: all.html  fn.main.html  index.html  sidebar-items.js
track_search/adapter/: index.html  sidebar-items.js
track_search/adapter/controller/: index.html
track_search/adapter/gateway/: index.html  (+1 more)
track_search/application/: index.html  sidebar-items.js
track_search/entity/: index.html  sidebar-items.js
track_search/error/: enum.Error.html  index.html
track_search/usecase/: index.html  sidebar-items.js
usecase/: Cargo.toml
usecase/src/: lib.rs  track_usecase.rs
(+163 files in other folders)
