[package]
name = "track_search"
version = "0.1.0"
authors = ["Taiki Hayashi <grandcolline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = { version = "4.0.0-beta.7", features = ["openssl"] }
actix-rt = "2.2.0"
actix-http = "2.2.0"
askama = "0.10.5"
log = "0.4.14"
env_logger = "0.8.4"
failure = "0.1.8"
serde = "1.0.126"
serde_json = "1.0.64"
async-trait = "0.1.50"
awc = "2.0.3"

# For Docs
aquamarine = "0.1"

[profile.release]
opt-level = 'z'
