[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
view = { path = "../adapter/application/view" }
simple = { path = "../adapter/log/simple" }
mock = { path = "../adapter/repository/mock" }
port = { path = "../port" }
log = "0.4.17"
dotenv = "0.15.0"
clap = "3.2.17"
# envy = "0.4"
# serde = { version = "1.0", features = ["derive"] }
