[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" # web framework
tera = "1"      # html template
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
domain = { path = "../../domain" }
usecase = { path = "../../usecase" }
text-logger = { path = "../../adapter/text-logger" }
mock-gateway = { path = "../../adapter/mock-gateway" }

