[package]
name = "html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-web = "4" # web framework
tera = "1"      # html template
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
entity = { path = "../../../entity" }
port = { path = "../../../port" }
usecase = { path = "../../../usecase" }

